--- a/guide-repair_new.html
+++ b/guide-repair_new.html
@@ -687,39 +687,29 @@
                     const response = await fetch('/api/guide-repair_new', {
                         method: 'POST',
                         headers: { 'Content-Type': 'application/json' },
-                        body: JSON.stringify({ 
-                            question: question, 
+                        body: JSON.stringify({
+                            question: question,
                             stepContext: currentStep
                         })
                     });
 
+                    const result = await response.json(); // Always parse JSON to get error messages
+
                     if (!response.ok) {
-                    let errorMsg = `Server error: ${response.status} ${response.statusText}`;
-                    try {
-                        const e = await response.json();
-                        if (e.error) errorMsg = typeof e.error === 'string' ? e.error : JSON.stringify(e.error);
-                        else if (e.message) errorMsg = e.message;
-                    } catch {}
-                    throw new Error(errorMsg);
+                        // Use the message from our back-end's JSON error response
+                        throw new Error(result.message || `Server error: ${response.status}`);
                     }
 
-                    const result = await response.json();
+                    // --- START OF MODIFIED SECTION ---
 
-                    const parts = result?.candidates?.[0]?.content?.parts || [];
-                    let text = parts.map(p => p?.text || '').filter(Boolean).join('\n').trim();
-
-                    if (!text && result?.candidates?.[0]?.text) {
-                    text = String(result.candidates[0].text).trim();
-                    }
-
-                    if (text.startsWith('```')) {
-                    text = text.replace(/^```[a-zA-Z0-9]*\n?/,'').replace(/```$/,'').trim();
-                    }
+                    // The 'result' object is now the simple { answer: "..." } we created on the back-end.
+                    const text = result.answer;
 
                     if (!text) {
-                    const fr = result?.candidates?.[0]?.finishReason;
-                    throw new Error(fr === 'SAFETY' ? 'The request was blocked for safety reasons.' : 'Invalid API response structure.');
+                        throw new Error('Received an empty answer from the server.');
                     }
+
+                    // --- END OF MODIFIED SECTION ---
 
                     updateHELGA(text);
 
