--- a/examples.html
+++ b/examples.html
@@ -70,16 +70,16 @@
 
         <nav>
             <ul class="workflow-nav">
-                <li><a href="guide-repair_new.html?example=16"><span>🧹</span> The Janitor's Cookbook</a></li>
-                <li><a href="guide-repair_new.html?example=04"><span>⏳</span> The Long-Term Thinker</a></li>
-                <li><a href="guide-repair_new.html?example=18"><span>🚲</span> The Readymade Brain</a></li>
-                <li><a href="guide-repair_new.html?example=05"><span>🔪</span> The Anarchitect</a></li>
-                <li><a href="guide-repair_new.html?example=03"><span>🕸️</span> The Purist</a></li>
-                <li><a href="guide-repair_new.html?example=02"><span>🛠️</span> The Gentle Craftsman</a></li>
-                <li><a href="guide-repair_new.html?example=08"><span>✨</span> The Jeweler of Joints</a></li>
-                <li><a href="guide-repair_new.html?example=23"><span>🏙️</span> The Urbanist</a></li>
-                <li><a href="guide-repair_new.html?example=01"><span>🔬</span> The Preservation Scientist</a></li>
-                <li><a href="guide-repair_new.html?example=42"><span>🏰</span> The Stylistic Idealist</a></li>
+                <li><a href="guide-repair.html?example=16"><span>🧹</span> The Janitor's Cookbook</a></li>
+                <li><a href="guide-repair.html?example=04"><span>⏳</span> The Long-Term Thinker</a></li>
+                <li><a href="guide-repair.html?example=18"><span>🚲</span> The Readymade Brain</a></li>
+                <li><a href="guide-repair.html?example=05"><span>🔪</span> The Anarchitect</a></li>
+                <li><a href="guide-repair.html?example=03"><span>🕸️</span> The Purist</a></li>
+                <li><a href="guide-repair.html?example=02"><span>🛠️</span> The Gentle Craftsman</a></li>
+                <li><a href="guide-repair.html?example=08"><span>✨</span> The Jeweler of Joints</a></li>
+                <li><a href="guide-repair.html?example=23"><span>🏙️</span> The Urbanist</a></li>
+                <li><a href="guide-repair.html?example=01"><span>🔬</span> The Preservation Scientist</a></li>
+                <li><a href="guide-repair.html?example=42"><span>🏰</span> The Stylistic Idealist</a></li>
             </ul>
         </nav>
     </div>
