--- a/index.html
+++ b/index.html
@@ -119,11 +119,11 @@
 
         <nav>
             <ul class="workflow-nav">
-                <li><a href="generate-assembly_new.html" target="_blank" rel="noopener noreferrer"><span>🧱</span> Generate Assembly</a></li>
-                <li><a href="catalog-damages_new.html" target="_blank" rel="noopener noreferrer"><span>📍</span> Catalog Damages</a></li>
-                <li><a href="plan-actions_new.html" target="_blank" rel="noopener noreferrer"><span>📝</span> Plan Actions</a></li>
-                <li><a href="guide-repair_new.html" target="_blank" rel="noopener noreferrer"><span>🛠️</span> Guide Repair</a></li>
-                <li><a href="view-history_new.html" target="_blank" rel="noopener noreferrer"><span>📂</span> View History</a></li>
+                <li><a href="generate-assembly.html" target="_blank" rel="noopener noreferrer"><span>🧱</span> Generate Assembly</a></li>
+                <li><a href="catalog-damages.html" target="_blank" rel="noopener noreferrer"><span>📍</span> Catalog Damages</a></li>
+                <li><a href="plan-actions.html" target="_blank" rel="noopener noreferrer"><span>📝</span> Plan Actions</a></li>
+                <li><a href="guide-repair.html" target="_blank" rel="noopener noreferrer"><span>🛠️</span> Guide Repair</a></li>
+                <li><a href="view-history.html" target="_blank" rel="noopener noreferrer"><span>📂</span> View History</a></li>
                 <!-- New Button Added Below -->
                 <li><a href="examples.html" target="_blank" rel="noopener noreferrer" class="btn-examples"><span>🍓</span> Examples</a></li>
             </ul>
