--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
             background-color: #fff;
             color: #333;
             display: flex;
-            justify-content: center;
+            flex-direction: column;
+            align-items: center;
             padding: 20px 0;
             text-align: center;
         }
@@ -130,5 +131,14 @@
         </nav>
 
     </div>
+
+    <footer style="text-align:center; font-size:12px; color:#555; margin-top:40px; padding:20px; border-top:1px solid #ccc;">
+    <p>
+        © 2025 F.S.T.A. – From Structure to Action. All rights reserved.<br>
+        Licensed under the <a href="https://opensource.org/licenses/MIT" target="_blank" style="color:#000;">MIT License</a>.<br>
+        View source on <a href="https://github.com/tizianrein/fsta" target="_blank" style="color:#000;">GitHub</a>.
+    </p>
+    </footer>
+    
 </body>
 </html>
