--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
     <footer style="text-align:center; font-size:12px; color:#555; margin-top:40px; padding:20px; border-top:1px solid #ccc;">
     <p>
-        © 2025 F.S.T.A. – From Structure to Action. All rights reserved.<br>
+        © 2025 Tizian Rein – From Structure to Action. All rights reserved.<br>
         Licensed under the <a href="https://opensource.org/licenses/MIT" target="_blank" style="color:#000;">MIT License</a>.<br>
         View source on <a href="https://github.com/tizianrein/fsta" target="_blank" style="color:#000;">GitHub</a>.
     </p>
